# shell-escape

./: Makefile  README  README.md  shell-escape.cabal
Data/ByteString/: ShellEscape.hs
Data/ByteString/ShellEscape/: Bash.hs  Escape.hs  EscapeVector.hs  Put.hs  Sh.hs
Text/: ShellEscape.hs
Text/ShellEscape/: Bash.hs  Escape.hs  EscapeVector.hs  Put.hs  Sh.hs
bench/: Bench.hs
command-line-interface/: Escape.hs  experiments.bash  shell-escape-cli.cabal  usage
notes/: slides-UU.2010-08-26
test/: Echo.hs
